--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,10 @@ repositories {
     maven { url = 'https://oss.sonatype.org/content/groups/public' }
 }
 
+apply plugin: 'java'
+
+def instrumentedJavaSourcesDir = file("$buildDir/src/java")
+
 sourceSets {
     main {
         java {
@@ -33,12 +37,13 @@ dependencies {
     compile group: 'org.opendatakit', name: 'opendatakit-javarosa', version: '2.4.0'
     compile group: 'org.hsqldb', name: 'hsqldb', version: '2.4.0'
     compile group: 'com.brsanthu', name: 'google-analytics-java', version: '1.1.2'
-    compile group: 'junit', name: 'junit', version: '4.12' // should be testCompile, but junit doesn’t get added to the classpath
-
+    testCompile group: 'junit', name: 'junit', version: '4.12'
     compile files('lib/smallsql-0.21.jar')
     compile files('lib/threetenbp-1.3.1.jar')
     compile files('lib/LGoodDatePicker-10.3.1-backport.jar')
 }
+
+compileJava.source = instrumentedJavaSourcesDir
 
 // Required to use fileExtensions property in checkstyle file
 checkstyle {
